[tool.poetry]
name = "web-hw-5"
version = "0.1.0"
description = ""
authors = ["rattlingmars8 <rattlingmars8@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_5"}]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^11.0.3"
faker = "^18.9.0"
aiofile = "^3.8.5"
aiopath = "^0.6.11"
aiohttp = "^3.8.4"
tabulate = "^0.9.0"
prettytable = "^3.7.0"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
